Fixed overflow of sticky scale headers on sheet show page

--- a/app/assets/stylesheets/objects/sheets.scss
+++ b/app/assets/stylesheets/objects/sheets.scss
@@ -148,18 +148,29 @@ select {
 }
 
 .sticky-scale-header {
-  background-color: $dashboard-bg;
   border-left: 2px solid transparent;
   margin-bottom: 0;
   padding: 0 10px;
   position: sticky;
   top: $header-height;
 
+  .col-xs-12 {
+    background-color: $dashboard-bg;
+  }
+
   table {
     background-color: $dashboard-bg;
     margin-bottom: 0;
     position: sticky;
     top: 0;
+  }
+}
+
+.form-horizontal {
+  .dashboard-container {
+    .sticky-scale-header {
+      background-color: $dashboard-bg;
+    }
   }
 }
 
